--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h2>Связь баллов PISA с логарифмом зарплаты</h2>
+<h2>Связь баллов PISA с зарплатой</h2>
 <div class="container">
   <div id="chart-container">
     <div id="chart"></div>
